add route for bookings by user
