# server/db/bookings-db.js
@@ -11,6 +11,17 @@ const fetchBookingsByFacilityDb = async id => {
     return res.rows
 }
 
+const fetchBookingsByUserDb = async id => {
+    const res = await pool.query(
+        `SELECT bookings.id AS bookings_id, resources_id, organizer_id, start_time, end_time,
+         facilities_id, resources.name AS resources_name
+         FROM bookings
+         INNER JOIN resources ON bookings.resources_id = resources.id
+         INNER JOIN facilities ON resources.facilities_id = facilities.id
+         WHERE organizer_id = $1`, [id])
+    return res.rows
+}
+
 const createBookingDb = async ({resources_id, organizer_id, start_time, end_time}) => {
     const text = `INSERT INTO bookings(resources_id, organizer_id, start_time, end_time)
                   VALUES($1, $2, $3, $4) RETURNING *`
@@ -29,4 +40,4 @@ const fetchBookingByIdDb = async id => {
     return res.rows[0]
 }
 
-module.exports = { fetchBookingsByFacilityDb, createBookingDb, removeBookingDb, fetchBookingByIdDb }
+module.exports = { fetchBookingsByFacilityDb, fetchBookingsByUserDb, createBookingDb, removeBookingDb, fetchBookingByIdDb }
