# server/routes/index.js
@@ -1,7 +1,7 @@
 const Router = require('express-promise-router')
 const { getFacilityInfo, postFacility, getFacilites } = require('../controllers/facility-controller.js')
 const { signUpUser } = require('../controllers/auth-controller.js')
-const { getBookings, postBooking, deleteBooking } = require('../controllers/bookings-controller.js')
+const { getBookingsByFacility, getBookingsByUser, postBooking, deleteBooking } = require('../controllers/bookings-controller.js')
 const { validateGetFacilityInfo, validatePostFacility, validateGetResources, validateSignUpUser, validateGetBookings, validatePostBooking,
         validateDeleteBooking } = require('./validation')
 const { getResources } = require('../controllers/resources-controller.js')
@@ -17,7 +17,8 @@ router
 
     .post('/auth/signup', validateSignUpUser, signUpUser)
 
-    .get('/bookings/by_facility/:id', validateGetBookings, getBookings)
+    .get('/bookings/by_facility/:id', validateGetBookings, getBookingsByFacility)
+    .get('/bookings/by_user/:id', validateGetBookings, getBookingsByUser)
     .post('/bookings', validatePostBooking, postBooking)
     .delete('/bookings/:id', validateDeleteBooking, deleteBooking)
 
